# local-llm-research-agent

./: .dockerignore  .env.example  .gitignore  .mcp.json  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  MCP_AWARENESS_SUMMARY.md  README.md  SECURITY.md  SESSION_COMPLETION_SUMMARY.md  TESTING.md  TESTING_TASKS.md  TRANSPORT_TYPES_IMPLEMENTATION.md  alembic.ini  apply_session_fix.py  claude-progress.txt  debug_prompt.py  features.json  mcp_config.json  pyproject.toml  quick_endpoint_test.py  quick_test.py  rebuild-deploy.bat  rebuild-deploy.ps1  rebuild-deploy.sh  requirements.txt  start-dev.bat  start-dev.sh  stop-dev.bat  stop-dev.sh  test_cli_transports.py  test_mcp_commands.py  test_tool_visibility.py  test_transport_types.py  test_universal_agent.py
.claude/: migrated-archon-tasks.md
.claude/agents/: ai-engineer.md  api-documenter.md  data-engineer.md  docs-architect.md  documentation-manager.md  mermaid-expert.md  python-pro.md  reference-builder.md  validation-gates.md
.claude/commands/: execute-prp.md
.context/: README.md  SESSION_MEMORY.md  SKILLS_REMINDER.md
.github/: BRANCH_PROTECTION.md  PULL_REQUEST_TEMPLATE.md
.github/workflows/: auto-merge.yml  ci.yml  integration-tests.yml
.serena/: project.yml
.serena/memories/: code_style.md  project_overview.md  suggested_commands.md  task_completion.md
PRPs/: README.md  complete-production-readiness-prp.md  complete-production-readiness-with-critical-fixes-prp.md  enterprise-readiness-missing-components.md  local-llm-research-agent-prp.md  phase2-rag-react-ui-prp.md  phase2.1-backend-rag-prp.md  phase2.2-react-chat-prp.md  phase2.3-visualization-dashboard-prp.md  phase2.4-exports-powerbi-prp.md  phase2.5-advanced-polish-prp.md  phase3-apache-superset-prp.md
alembic/: env.py
alembic/versions/: 20251212_021031_7634261e3e9e_initial_phase2_tables.py  20251212_add_tags_to_documents.py  20251218_210131_b239d72597ab_add_performance_indexes.py  20251218_214611_805336405b97_add_database_connections_table.py  20251218_220325_cc0879b502ec_add_users_and_refresh_tokens.py  20260102_234639_a42a71aaaead_add_account_lockout_fields.py
config/: README.md  default.yaml  development.yaml  production.yaml
docker/: Dockerfile.api  Dockerfile.frontend  Dockerfile.superset  README.md  SUPERSET_SETUP_COMPLETE.md  check-ports.bat  check-ports.sh  deploy-full.bat  deploy-full.sh  docker-compose.yml  entrypoint.sh  nginx.frontend.conf  setup-database.bat  setup-database.sh  test-ollama-connection.sh
docker/superset/: MANUAL_DATABASE_SETUP.md  PASSWORD_CHANGE_NOTICE.md  README.md  RESOLUTION_SUMMARY.md  TROUBLESHOOTING_SUMMARY.md  create_examples.py  setup_databases.py  superset_config.py
docs/: CLEANUP_SUMMARY.md  README.md  ROOT_STRUCTURE.md  STREAMLIT_FIX_SUMMARY.md  STREAMLIT_TESTING.md  TESTING_TASKS.md  mcp-add-guide.md  mcp-integration-tests-summary.md  mcp-management-completion-report.md  mcp-session-management-fix.md  superset-guide.md  test-quick-reference.md
docs/adr/: 001-sql-server-vectors.md  002-pydantic-ai.md  003-dual-database-architecture.md  004-react-frontend.md  005-websocket-realtime.md  006-local-first-ollama.md  007-zustand-state.md  README.md  template.md
docs/api/: API_DOCUMENTATION_SUMMARY.md  INDEX.md  README.md  agent.md  errors.md  fastapi.md  mcp-client.md  models.md  providers.md  rag.md  reference.md  utilities.md  websockets.md
docs/deployment/: README.md  docker-compose.md  monitoring.md  security-checklist.md
docs/diagrams/: architecture.excalidraw
docs/frontend/: README.md  api-integration.md  architecture.md  state-management.md  styling-guide.md
docs/guides/: COMMIT_NOW.md  DOCUMENTATION-STANDARDS.md  GIT_COMMIT_GUIDE.md  configuration.md  docker-services.md  exports.md  foundry-local.md  getting-started.md  ollama.md  query-profiling.md  redis-caching.md  troubleshooting.md
docs/implementation/: CONFIG_SERVICE_SUMMARY.md  QUERY_OPTIMIZATION_SUMMARY.md  README.md  REDIS_CACHE_IMPLEMENTATION.md  RETRY_IMPLEMENTATION.md  websocket-refactor-summary.md
docs/mcp/: DOCUMENTATION_SUMMARY.md  EXTERNAL_MCP_INTEGRATION.md  MCP_CONFIGURATION_REFERENCE.md  MCP_CONFIG_FIX.md  README.md  (+4 more)
examples/: README.md  basic_chat.py  config_service_example.py  multi_mcp_example.py  multi_tool_example.py  query_profiler_example.py  rag_search_example.py  redis_cache_example.py  retry_example.py  sql_query_example.py  streaming_example.py  test_chat_methods.py  test_chat_quick.py  test_individual_methods.py  vector_store_factory_example.py  websocket_manager_example.py
frontend/: README.md  index.html  package.json  playwright.config.ts  tailwind.config.js  vite.config.ts  vitest.config.ts
local-llm-research-agent/: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
local-llm-research-agent/.claude/commands/: generate-prp.md
local-llm-research-agent/PRPs/: local-llm-research-agent-prp.md
local-llm-research-agent/PRPs/templates/: prp_base.md
local-llm-research-agent/ai_docs/: mssql_mcp_tools.md  pydantic_ai_mcp.md
local-llm-research-agent/docker/: setup-database.bat
local-llm-research-agent/examples/: basic_chat.py
local-llm-research-agent/src/: main.py
scripts/: host_agent.py  restart_backend.ps1  setup_superset.py  start-host-agent.bat  start-host-agent.sh
src/: __init__.py  main.py
tests/: __init__.py  conftest.py  test_agent.py  test_cache.py  test_chat_methods.py  test_chat_quick.py  test_cli.py  test_cli_integration.py  test_config.py  test_config_service.py  test_database_manager.py  test_docling_processor.py  test_document_processor_errors.py  test_documents_routes.py  test_export.py  test_health.py  test_history.py  test_individual_methods.py  test_integration.py  test_integration_ollama.py  test_logger.py  test_mcp_client.py  test_mcp_commands.py  test_mcp_management.py  test_models.py  test_mssql_config.py  test_prompts.py  test_providers.py  test_query_profiler.py  test_rag_integration.py  test_rate_limiter.py  test_redis_cache.py  test_retry.py  test_settings_database.py  test_vector_store_refactor.py  test_websocket.py
(+244 files in other folders)
