[project]
name = "local-llm-research-agent"
version = "0.1.0"
description = "A 100% local smart chat agent for SQL Server data analytics using Ollama and MCP"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
keywords = [
    "llm",
    "ollama",
    "sql-server",
    "mcp",
    "pydantic-ai",
    "chat-agent",
    "data-analytics"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    # Agent Framework
    "pydantic-ai[mcp]>=0.2.0",
    "pydantic>=2.0.0",
    
    # Web UI
    "streamlit>=1.30.0",
    
    # CLI
    "typer>=0.9.0",
    "rich>=13.0.0",
    
    # Configuration & Environment
    "python-dotenv>=1.0.0",
    
    # Logging
    "structlog>=24.0.0",
    
    # HTTP Client (for Ollama)
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0.0",
    
    # Linting & Formatting
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    
    # Debugging
    "ipdb>=0.13.0",
]

[project.scripts]
llm-chat = "src.cli.chat:app"

[project.urls]
Homepage = "https://github.com/yourusername/local-llm-research-agent"
Documentation = "https://github.com/yourusername/local-llm-research-agent#readme"
Repository = "https://github.com/yourusername/local-llm-research-agent"
Issues = "https://github.com/yourusername/local-llm-research-agent/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG", # flake8-unused-arguments
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.isort]
known-first-party = ["src"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
addopts = [
    "-v",
    "--tb=short",
    "-ra",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_configs = true
show_error_codes = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
    "streamlit.*",
    "typer.*",
    "rich.*",
]
ignore_missing_imports = true

[tool.coverage.run]
source = ["src"]
branch = true
omit = [
    "*/tests/*",
    "*/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "ipdb>=0.13.0",
]
